# python-nodejs-comparisons

./: .gitignore  README.md  justfile  package-lock.json  package.json  pyproject.toml  uwsgi.ini
src/: app.js  main.py
